Update to the latest spring boot version